# pyjanitor

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pyproject.toml
janitor/: Cargo.toml  __init__.py  pyproject.toml
janitor/polars/: __init__.py  _utils.py  clean_excel_dates.py  drop_nulls.py  replace_nulls.py  replace_nulls2.py  string.py  type_alias.py
janitor/src/: lib.rs
janitor/src/str_ext/: mod.rs
tests/polars/functions/: test_clean_excel_dates_polars.py  test_drop_nulls_polars.py  test_replace_nulls2_polars.py  test_replace_nulls_polars.py  test_string.py
